fixed some visuals and created more features

--- a/prepare.ipynb
+++ b/prepare.ipynb
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 198,
    "id": "a10107fb",
    "metadata": {},
    "outputs": [],
@@ -301,8 +301,7 @@
     "    # creates ranking for each video based off of country index\n",
     "    df.categoryId = df.categoryId.astype('object')\n",
     "    df.publishedAt = pd.to_datetime(df.publishedAt, utc=True)\n",
-    "    df.trending_date = '22.2.11'\n",
-    "    df.trending_date = pd.to_datetime(df.trending_date, format='%y.%d.%m', utc=True)\n",
+    "    df.trending_date = pd.to_datetime('2022-11-02', utc=True)\n",
     "    df['age']=(df.trending_date - df.publishedAt)\n",
     "    df['engagement'] = (df.likes + df.comment_count * 4 )/df.view_count\n",
     "    df['sponsored'] = np.where(df.description.str.contains('sponsor'), 1, 0)\n",
@@ -611,6 +610,12 @@
     "    #converts the age category timedelta into hours .. so the videos are x hours old now \n",
     "    df.age = (df.age.dt.days * 24) + (df.age.dt.seconds/3600)\n",
     "\n",
+    "    #converts channel_age to days\n",
+    "    df.channel_age = pd.to_datetime(df.channel_age, utc=True)\n",
+    "    fresh = pd.to_datetime('22.2.11', utc=True)\n",
+    "    df.channel_age = df.channel_age - fresh\n",
+    "    df.channel_age = df.channel_age.dt.days\n",
+    "\n",
     "    #create features based on length of information within each specified column\n",
     "    df['title_lengths'] = df[\"title\"].apply(lambda x: len(x))\n",
     "    df['desc_lengths'] = df[\"description\"].apply(lambda x: 0 if pd.isnull(x) else len(x))\n",
@@ -638,265 +643,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4edffbcf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 196,
    "id": "cd746e8f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pesty = pd.read_pickle('prepared.pkl')any up"
+    "pesty = pd.read_pickle('prepared.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
-   "id": "ce05c62f",
+   "execution_count": null,
+   "id": "7c34032a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 2019 entries, 0 to 2018\n",
-      "Data columns (total 35 columns):\n",
-      " #   Column                   Non-Null Count  Dtype              \n",
-      "---  ------                   --------------  -----              \n",
-      " 0   video_id                 2019 non-null   object             \n",
-      " 1   title                    2019 non-null   object             \n",
-      " 2   publishedAt              2019 non-null   datetime64[ns, UTC]\n",
-      " 3   channelTitle             2019 non-null   object             \n",
-      " 4   categoryId               2019 non-null   object             \n",
-      " 5   trending_date            2019 non-null   datetime64[ns, UTC]\n",
-      " 6   tags                     2019 non-null   object             \n",
-      " 7   view_count               2019 non-null   int64              \n",
-      " 8   likes                    2019 non-null   int64              \n",
-      " 9   comment_count            2019 non-null   int64              \n",
-      " 10  thumbnail_link           2019 non-null   object             \n",
-      " 11  comments_disabled        2019 non-null   bool               \n",
-      " 12  ratings_disabled         2019 non-null   bool               \n",
-      " 13  description              2019 non-null   object             \n",
-      " 14  duration                 2019 non-null   int64              \n",
-      " 15  captions                 2019 non-null   bool               \n",
-      " 16  region                   2019 non-null   object             \n",
-      " 17  rank                     2019 non-null   int64              \n",
-      " 18  top_25                   2019 non-null   int64              \n",
-      " 19  channel_age              2019 non-null   object             \n",
-      " 20  subscribers              2019 non-null   int64              \n",
-      " 21  video_count              2019 non-null   int64              \n",
-      " 22  age                      2019 non-null   float64            \n",
-      " 23  engagement               2019 non-null   float64            \n",
-      " 24  sponsored                2019 non-null   int64              \n",
-      " 25  num_of_tags              2019 non-null   int64              \n",
-      " 26  word_bank                2019 non-null   object             \n",
-      " 27  cleaned_tags             2019 non-null   object             \n",
-      " 28  cleaned_desc             2019 non-null   object             \n",
-      " 29  title_in_description     2019 non-null   int64              \n",
-      " 30  title_in_tags            2019 non-null   int64              \n",
-      " 31  pct_tags_in_description  2019 non-null   float64            \n",
-      " 32  title_lengths            2019 non-null   int64              \n",
-      " 33  desc_lengths             2019 non-null   int64              \n",
-      " 34  tags_length              2019 non-null   int64              \n",
-      "dtypes: bool(3), datetime64[ns, UTC](2), float64(3), int64(15), object(12)\n",
-      "memory usage: 510.8+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "pesty.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "cbc0c721",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 9536 entries, 0 to 9535\n",
-      "Data columns (total 32 columns):\n",
-      " #   Column                   Non-Null Count  Dtype              \n",
-      "---  ------                   --------------  -----              \n",
-      " 0   video_id                 9536 non-null   object             \n",
-      " 1   title                    9536 non-null   object             \n",
-      " 2   publishedAt              9536 non-null   datetime64[ns, UTC]\n",
-      " 3   channelTitle             9536 non-null   object             \n",
-      " 4   categoryId               9536 non-null   object             \n",
-      " 5   trending_date            9536 non-null   datetime64[ns, UTC]\n",
-      " 6   tags                     9536 non-null   object             \n",
-      " 7   view_count               9536 non-null   int64              \n",
-      " 8   likes                    9536 non-null   int64              \n",
-      " 9   comment_count            9536 non-null   int64              \n",
-      " 10  thumbnail_link           9536 non-null   object             \n",
-      " 11  comments_disabled        9536 non-null   bool               \n",
-      " 12  ratings_disabled         9536 non-null   bool               \n",
-      " 13  description              9536 non-null   object             \n",
-      " 14  duration                 9536 non-null   int64              \n",
-      " 15  captions                 9536 non-null   bool               \n",
-      " 16  region                   9536 non-null   object             \n",
-      " 17  rank                     9536 non-null   int64              \n",
-      " 18  top_25                   9536 non-null   int64              \n",
-      " 19  age                      9536 non-null   float64            \n",
-      " 20  engagement               9536 non-null   float64            \n",
-      " 21  sponsored                9536 non-null   int64              \n",
-      " 22  num_of_tags              9536 non-null   int64              \n",
-      " 23  word_bank                9536 non-null   object             \n",
-      " 24  cleaned_tags             9536 non-null   object             \n",
-      " 25  cleaned_desc             9536 non-null   object             \n",
-      " 26  title_in_description     9536 non-null   int64              \n",
-      " 27  title_in_tags            9536 non-null   int64              \n",
-      " 28  pct_tags_in_description  9536 non-null   float64            \n",
-      " 29  title_lengths            9536 non-null   int64              \n",
-      " 30  desc_lengths             9536 non-null   int64              \n",
-      " 31  tags_length              9536 non-null   int64              \n",
-      "dtypes: bool(3), datetime64[ns, UTC](2), float64(3), int64(13), object(11)\n",
-      "memory usage: 2.1+ MB\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'to_datafram'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m/Users/sinao/codeup-data-science/top_200/prepare.ipynb Cell 18\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/sinao/codeup-data-science/top_200/prepare.ipynb#X25sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m pesty\u001b[39m.\u001b[39;49minfo()\u001b[39m.\u001b[39;49mto_datafram()\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'to_datafram'"
-     ]
-    }
-   ],
-   "source": [
-    "pesty.info"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "22da719b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 9536 entries, 0 to 9535\n",
-      "Data columns (total 32 columns):\n",
-      " #   Column                   Non-Null Count  Dtype              \n",
-      "---  ------                   --------------  -----              \n",
-      " 0   video_id                 9536 non-null   object             \n",
-      " 1   title                    9536 non-null   object             \n",
-      " 2   publishedAt              9536 non-null   datetime64[ns, UTC]\n",
-      " 3   channelTitle             9536 non-null   object             \n",
-      " 4   categoryId               9536 non-null   object             \n",
-      " 5   trending_date            9536 non-null   datetime64[ns, UTC]\n",
-      " 6   tags                     9536 non-null   object             \n",
-      " 7   view_count               9536 non-null   int64              \n",
-      " 8   likes                    9536 non-null   int64              \n",
-      " 9   comment_count            9536 non-null   int64              \n",
-      " 10  thumbnail_link           9536 non-null   object             \n",
-      " 11  comments_disabled        9536 non-null   bool               \n",
-      " 12  ratings_disabled         9536 non-null   bool               \n",
-      " 13  description              9536 non-null   object             \n",
-      " 14  duration                 9536 non-null   int64              \n",
-      " 15  captions                 9536 non-null   bool               \n",
-      " 16  region                   9536 non-null   object             \n",
-      " 17  rank                     9536 non-null   int64              \n",
-      " 18  top_25                   9536 non-null   int64              \n",
-      " 19  age                      9536 non-null   float64            \n",
-      " 20  engagement               9536 non-null   float64            \n",
-      " 21  sponsored                9536 non-null   int64              \n",
-      " 22  num_of_tags              9536 non-null   int64              \n",
-      " 23  word_bank                9536 non-null   object             \n",
-      " 24  cleaned_tags             9536 non-null   object             \n",
-      " 25  cleaned_desc             9536 non-null   object             \n",
-      " 26  title_in_description     9536 non-null   int64              \n",
-      " 27  title_in_tags            9536 non-null   int64              \n",
-      " 28  pct_tags_in_description  9536 non-null   float64            \n",
-      " 29  title_lengths            9536 non-null   int64              \n",
-      " 30  desc_lengths             9536 non-null   int64              \n",
-      " 31  tags_length              9536 non-null   int64              \n",
-      "dtypes: bool(3), datetime64[ns, UTC](2), float64(3), int64(13), object(11)\n",
-      "memory usage: 2.1+ MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "pesty.info()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f8ce0411",
-   "metadata": {},
-   "source": [
-    " #   Column                   Non-Null Count  Dtype              \n",
-    "---  ------                   --------------  -----              \n",
-    " 0   video_id                 9536 non-null   object             \n",
-    " 1   title                    9536 non-null   object             \n",
-    " 2   publishedAt              9536 non-null   datetime64\n",
-    " 3   channelTitle             9536 non-null   object             \n",
-    " 4   categoryId               9536 non-null   object             \n",
-    " 5   trending_date            9536 non-null   datetime64\n",
-    " 6   tags                     9536 non-null   object             \n",
-    " 7   view_count               9536 non-null   int64              \n",
-    " 8   likes                    9536 non-null   int64              \n",
-    " 9   comment_count            9536 non-null   int64              \n",
-    " 10  thumbnail_link           9536 non-null   object             \n",
-    " 11  comments_disabled        9536 non-null   bool               \n",
-    " 12  ratings_disabled         9536 non-null   bool               \n",
-    " 13  description              9536 non-null   object             \n",
-    " 14  duration                 9536 non-null   int64              \n",
-    " 15  captions                 9536 non-null   bool               \n",
-    " 16  region                   9536 non-null   object             \n",
-    " 17  rank                     9536 non-null   int64              \n",
-    " 18  top_25                   9536 non-null   int64              \n",
-    " 19  age                      9536 non-null   float64            \n",
-    " 20  engagement               9536 non-null   float64            \n",
-    " 21  sponsored                9536 non-null   int64              \n",
-    " 22  num_of_tags              9536 non-null   int64              \n",
-    " 23  word_bank                9536 non-null   object             \n",
-    " 24  cleaned_tags             9536 non-null   object             \n",
-    " 25  cleaned_desc             9536 non-null   object             \n",
-    " 26  title_in_description     9536 non-null   int64              \n",
-    " 27  title_in_tags            9536 non-null   int64              \n",
-    " 28  pct_tags_in_description  9536 non-null   float64            \n",
-    " 29  title_lengths            9536 non-null   int64              \n",
-    " 30  desc_lengths             9536 non-null   int64              \n",
-    " 31  tags_length              9536 non-null   int64  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "11904052",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'|    | #   | Column                  | Non-Null       | Count    | Dtype      |\\n|---:|:----|:------------------------|:---------------|:---------|:-----------|\\n|  0 | --- | ------                  | -------------- | -----    |            |\\n|  1 | 0   | video_id                | 9536           | non-null | object     |\\n|  2 | 1   | title                   | 9536           | non-null | object     |\\n|  3 | 2   | publishedAt             | 9536           | non-null | datetime64 |\\n|  4 | 3   | channelTitle            | 9536           | non-null | object     |\\n|  5 | 4   | categoryId              | 9536           | non-null | object     |\\n|  6 | 5   | trending_date           | 9536           | non-null | datetime64 |\\n|  7 | 6   | tags                    | 9536           | non-null | object     |\\n|  8 | 7   | view_count              | 9536           | non-null | int64      |\\n|  9 | 8   | likes                   | 9536           | non-null | int64      |\\n| 10 | 9   | comment_count           | 9536           | non-null | int64      |\\n| 11 | 10  | thumbnail_link          | 9536           | non-null | object     |\\n| 12 | 11  | comments_disabled       | 9536           | non-null | bool       |\\n| 13 | 12  | ratings_disabled        | 9536           | non-null | bool       |\\n| 14 | 13  | description             | 9536           | non-null | object     |\\n| 15 | 14  | duration                | 9536           | non-null | int64      |\\n| 16 | 15  | captions                | 9536           | non-null | bool       |\\n| 17 | 16  | region                  | 9536           | non-null | object     |\\n| 18 | 17  | rank                    | 9536           | non-null | int64      |\\n| 19 | 18  | top_25                  | 9536           | non-null | int64      |\\n| 20 | 19  | age                     | 9536           | non-null | float64    |\\n| 21 | 20  | engagement              | 9536           | non-null | float64    |\\n| 22 | 21  | sponsored               | 9536           | non-null | int64      |\\n| 23 | 22  | num_of_tags             | 9536           | non-null | int64      |\\n| 24 | 23  | word_bank               | 9536           | non-null | object     |\\n| 25 | 24  | cleaned_tags            | 9536           | non-null | object     |\\n| 26 | 25  | cleaned_desc            | 9536           | non-null | object     |\\n| 27 | 26  | title_in_description    | 9536           | non-null | int64      |\\n| 28 | 27  | title_in_tags           | 9536           | non-null | int64      |\\n| 29 | 28  | pct_tags_in_description | 9536           | non-null | float64    |\\n| 30 | 29  | title_lengths           | 9536           | non-null | int64      |\\n| 31 | 30  | desc_lengths            | 9536           | non-null | int64      |\\n| 32 | 31  | tags_length             | 9536           | non-null | int64      |'"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pd.read_clipboard().to_markdown()"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
