--- a/shorter_explore.ipynb
+++ b/shorter_explore.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3316,11 +3316,204 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Phase Two"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Channel Age\n",
+    "Min age of channel with trending and top 25\n",
+    "Max age of channel with trending and top 25\n",
+    "Avg age of channels with trending and top 25\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.channel_age = pd.to_datetime(df.channel_age, utc=True)\n",
+    "fresh = pd.to_datetime('2022-11-02', utc=True)\n",
+    "df.channel_age = abs(fresh - df.channel_age)\n",
+    "df.channel_age = df.channel_age.dt.days"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fresh = pd.to_datetime('2022-11-02', utc=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       3213\n",
+       "1       3604\n",
+       "2       3561\n",
+       "3       3159\n",
+       "4       4178\n",
+       "        ... \n",
+       "2014    2299\n",
+       "2015    2302\n",
+       "2016    3323\n",
+       "2017     997\n",
+       "2018    3968\n",
+       "Name: channel_age, Length: 2019, dtype: int64"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.channel_age"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Subscriber count \n",
+    "Do channels have different categories? Do they have different categories in the top 25\n",
+    "What percent of view is the subscriber count? Or is it a multiple\n",
+    "Sub v Engagement: do channels with higher sub counts have more engagement\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Channel View counts\n",
+    "View count vs top 25 → do videos in top 25 have their channels viewed more\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Video count\n",
+    "How many views per videos?\n",
+    "Videos vs age .. what is their release count vs age of channel \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['ch_views_per_video'] = df.view_count / df.video_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        2.997162\n",
+       "1        0.466967\n",
+       "2        0.850494\n",
+       "3        0.367237\n",
+       "4       24.032609\n",
+       "          ...    \n",
+       "2014     0.644343\n",
+       "2015     0.929370\n",
+       "2016     0.217529\n",
+       "2017     0.024748\n",
+       "2018     8.635762\n",
+       "Length: 2019, dtype: float64"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.video_count / df.channel_age"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "video_id                                                         bbl7oKjOw1U\n",
+       "title                      シーズン15 アプデ徹底検証！RE-45が絶対炎上レベルの強さｗｗ ランページ大人気間違いな...\n",
+       "publishedAt                                        2022-11-01 20:11:42+00:00\n",
+       "channelTitle                                                          TIE Ru\n",
+       "categoryId                                                            Gaming\n",
+       "trending_date                                      2022-11-02 00:00:00+00:00\n",
+       "tags                       TIE Ru ゲーム実況 PCゲーム Apex Legends エーペックスレジェンズ Ap...\n",
+       "view_count                                                            313545\n",
+       "likes                                                                   4899\n",
+       "comment_count                                                            596\n",
+       "thumbnail_link                https://i.ytimg.com/vi/bbl7oKjOw1U/default.jpg\n",
+       "comments_disabled                                                      False\n",
+       "ratings_disabled                                                       False\n",
+       "description                ►►『Twitter』 - https://twitter.com/Poulmt►►お仕事/...\n",
+       "duration                                                                 965\n",
+       "captions                                                               False\n",
+       "region                                                                    JP\n",
+       "rank                                                                       1\n",
+       "top_25                                                                     1\n",
+       "channel_age                                                               92\n",
+       "subscribers                                                           795000\n",
+       "video_count                                                             2211\n",
+       "age                                                                    3.805\n",
+       "engagement                                                          0.023228\n",
+       "sponsored                                                                  0\n",
+       "num_of_tags                                                                9\n",
+       "word_bank                  [►, ►, Twitter, 』, https://twitter.com/Poulmt►...\n",
+       "cleaned_tags               {TIE, PCゲーム, Legend, あぺ, ゲーム実況, Legends, Ru, A...\n",
+       "cleaned_desc               {』 - https://twitter.com/Poulmt►►お仕事/タイアップ案件のご...\n",
+       "title_in_description                                                       0\n",
+       "title_in_tags                                                              0\n",
+       "pct_tags_in_description                                                  0.0\n",
+       "title_lengths                                                             63\n",
+       "desc_lengths                                                             187\n",
+       "tags_length                                                               65\n",
+       "ch_views_per_video                                                141.811398\n",
+       "Name: 4, dtype: object"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[4]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Translation\n",
+    "### Basic exploration \n"
+   ]
   }
  ],
  "metadata": {
