added more features

--- a/prepare.ipynb
+++ b/prepare.ipynb
@@ -612,8 +612,8 @@
     "\n",
     "    #converts channel_age to days\n",
     "    df.channel_age = pd.to_datetime(df.channel_age, utc=True)\n",
-    "    fresh = pd.to_datetime('22.2.11', utc=True)\n",
-    "    df.channel_age = df.channel_age - fresh\n",
+    "    fresh = pd.to_datetime('2022-11-02', utc=True)\n",
+    "    df.channel_age = abs(fresh - df.channel_age)\n",
     "    df.channel_age = df.channel_age.dt.days\n",
     "\n",
     "    #create features based on length of information within each specified column\n",
@@ -621,6 +621,12 @@
     "    df['desc_lengths'] = df[\"description\"].apply(lambda x: 0 if pd.isnull(x) else len(x))\n",
     "    df['tags_length'] = df['tags'].apply(lambda x: len(x.replace('|', '')) if x != '[none]' else 0)\n",
     "\n",
+    "    #creates metrics based on video count\n",
+    "    df['content_rate'] = df.video_count / df.channel_age\n",
+    "\n",
+    "    #creates metric based on view count and subscriber relationship\n",
+    "    df['views_per_sub'] = df.view_count/df.subscribers\n",
+    "    \n",
     "    df.reset_index(inplace=True)\n",
     "\n",
     "    df.drop(columns='index', inplace=True)\n",
