--- a/shorter_explore.ipynb
+++ b/shorter_explore.ipynb
@@ -3388,10 +3388,184 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Subscriber count \n",
-    "Do channels have different categories? Do they have different categories in the top 25\n",
-    "What percent of view is the subscriber count? Or is it a multiple\n",
+    "## Subscriber count   \n",
+    "What percent of subscribers is the view count? Or is it a multiplier?  \n",
     "Sub v Engagement: do channels with higher sub counts have more engagement\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>view_count</th>\n",
+       "      <th>subscribers</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1098919</td>\n",
+       "      <td>2210000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2217807</td>\n",
+       "      <td>7180000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2258144</td>\n",
+       "      <td>19200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3262953</td>\n",
+       "      <td>15000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>313545</td>\n",
+       "      <td>795000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014</th>\n",
+       "      <td>1902762</td>\n",
+       "      <td>12400000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015</th>\n",
+       "      <td>1976426</td>\n",
+       "      <td>4630000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016</th>\n",
+       "      <td>1529830</td>\n",
+       "      <td>7720000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017</th>\n",
+       "      <td>1835677</td>\n",
+       "      <td>321000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018</th>\n",
+       "      <td>430118</td>\n",
+       "      <td>2570000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2019 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      view_count  subscribers\n",
+       "0        1098919      2210000\n",
+       "1        2217807      7180000\n",
+       "2        2258144     19200000\n",
+       "3        3262953     15000000\n",
+       "4         313545       795000\n",
+       "...          ...          ...\n",
+       "2014     1902762     12400000\n",
+       "2015     1976426      4630000\n",
+       "2016     1529830      7720000\n",
+       "2017     1835677       321000\n",
+       "2018      430118      2570000\n",
+       "\n",
+       "[2019 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[['view_count', 'subscribers']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['video_id', 'title', 'publishedAt', 'channelTitle', 'categoryId',\n",
+       "       'trending_date', 'tags', 'view_count', 'likes', 'comment_count',\n",
+       "       'thumbnail_link', 'comments_disabled', 'ratings_disabled',\n",
+       "       'description', 'duration', 'captions', 'region', 'rank', 'top_25',\n",
+       "       'channel_age', 'subscribers', 'video_count', 'age', 'engagement',\n",
+       "       'sponsored', 'num_of_tags', 'word_bank', 'cleaned_tags', 'cleaned_desc',\n",
+       "       'title_in_description', 'title_in_tags', 'pct_tags_in_description',\n",
+       "       'title_lengths', 'desc_lengths', 'tags_length', 'content_rate'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['views_per_sub'] = df.view_count/df.subscribers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Channel Release Informatin"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Do they have different categories in the top 25?  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Do channels release videos in multiple categories? "
    ]
   },
   {
@@ -3407,7 +3581,7 @@
    "metadata": {},
    "source": [
     "## Video count\n",
-    "How many views per videos?\n",
+    "How many views per videos?  \n",
     "Videos vs age .. what is their release count vs age of channel \n"
    ]
   },
@@ -3417,38 +3591,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['ch_views_per_video'] = df.view_count / df.video_count"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0        2.997162\n",
-       "1        0.466967\n",
-       "2        0.850494\n",
-       "3        0.367237\n",
-       "4       24.032609\n",
-       "          ...    \n",
-       "2014     0.644343\n",
-       "2015     0.929370\n",
-       "2016     0.217529\n",
-       "2017     0.024748\n",
-       "2018     8.635762\n",
-       "Length: 2019, dtype: float64"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.video_count / df.channel_age"
+    "#df['views_per_video'] = df.view_count / df.video_count\n",
+    "df['content_rate'] = df.video_count / df.channel_age"
    ]
   },
   {
